# cmakespec

dylib/dlopen/: README.md
dylib/dlopen/cmd/: CMakeLists.txt
dylib/shared/cmd/: main.cc
dylib/shared/value/: CMakeLists.txt
dylib/static/value/: value.c  value.h
dylib/visibility/: CMakeLists.txt
dylib/visibility/base/: CMakeLists.txt  attributes.h
dylib/visibility/data/: data.c
dylib/visibility/value/: CMakeLists.txt
hello/: CMakeLists.txt
hello-cmake/: README.md
hello-cmake/cmd/: CMakeLists.txt
hello-cmake/greet/: CMakeLists.txt
hello-cmake/util/: local_time.cc  local_time.h  string_view.h
hello/cmd/: CMakeLists.txt  main.cc
hello/greet/: hello_greet.cc  hello_greet.h
hello/util/: CMakeLists.txt  string_view.cc  string_view_test.cc
libspec/dlopen/cmd/: main.cc
libspec/dlopen/data/: CMakeLists.txt
libspec/dlopen/value/: CMakeLists.txt  value.c
libspec/shared/data/: CMakeLists.txt
libspec/static/: CMakeLists.txt
libspec/static/cmd/: CMakeLists.txt
libspec/static/data/: data.h
libspec/static/value/: CMakeLists.txt
libspec/visibility/value/: value.c
